--- a/News_2/Views/Post/Detail.cshtml
+++ b/News_2/Views/Post/Detail.cshtml
@@ -34,9 +34,25 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ImageUrl)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Category)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Category.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.PostTags)
+        </dt>
+        <dd class="col-sm-10">
+            #
+            @foreach (var item in Model.PostTags)
+            {
+                <span>@item.Tag.Name</span>
+            }
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-controller="Post" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
